--- a/resources.html
+++ b/resources.html
@@ -35,7 +35,37 @@
         </div>
     </div>
   </header>
-
+<!-- Animation Section -->
+<section class="animation-section" id="whatsappAnimation">
+    <div class="animation-wrapper">
+        <div class="scrolling-text">
+            <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
+               class="whatsapp-link" 
+               target="_blank">
+                <span>
+                    <i class="fab fa-whatsapp"></i>
+                    📚 Online Classes Available at R20 per class! Click to WhatsApp us now!
+                </span>
+            </a>
+            <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
+               class="whatsapp-link" 
+               target="_blank">
+                <span>
+                    <i class="fab fa-whatsapp"></i>
+                    💻 Affordable Online Tutoring - R20 per class! Get help today!
+                </span>
+            </a>
+            <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
+               class="whatsapp-link" 
+               target="_blank">
+                <span>
+                    <i class="fab fa-whatsapp"></i>
+                    The best Tutoring Service for Only R20 per session! Contact us now!
+                </span>
+            </a>
+        </div>
+    </div>
+</section>
   <main class="content-container">
     <div class="upload-section">
         <h2><i class="fas fa-cloud-upload-alt"></i> Upload Document</h2>
