--- a/resources.html
+++ b/resources.html
@@ -42,26 +42,20 @@
             <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
                class="whatsapp-link" 
                target="_blank">
-                <span>
-                    <i class="fab fa-whatsapp"></i>
-                    📚 Online Classes Available at R20 per class! Click to WhatsApp us now!
-                </span>
+                <i class="fab fa-whatsapp"></i>
+                📚 Online Classes Available at R20 per class! Click to WhatsApp us now!
             </a>
             <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
                class="whatsapp-link" 
                target="_blank">
-                <span>
-                    <i class="fab fa-whatsapp"></i>
-                    💻 Affordable Online Tutoring - R20 per class! Get help today!
-                </span>
+                <i class="fab fa-whatsapp"></i>
+                Quality tutoring - R20 per class! Get help today!
             </a>
             <a href="https://wa.me/27732792426?text=Hi!%20I'm%20interested%20in%20online%20classes%20at%20R20%20per%20class" 
                class="whatsapp-link" 
                target="_blank">
-                <span>
-                    <i class="fab fa-whatsapp"></i>
-                    The best Tutoring Service for Only R20 per session! Contact us now!
-                </span>
+                <i class="fab fa-whatsapp"></i>
+                🎓 Quality Education for Only R20 per session! Contact us now!
             </a>
         </div>
     </div>
