resources.css update

--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 <header class="resources-hero">
     <div class="hero-content">
-        <h1>Study Material Hub</h1>
+        <h1>Peer-2-Peer PRO |Resources</h1>
         <p>Explore documents shared by your peers</p>
         <div class="search-wrapper">
             <i class="fas fa-search"></i>
