--- a/resources.html
+++ b/resources.html
@@ -15,21 +15,14 @@
         <img src="favicon.ico" alt="Logo">
         Peer-2-Peer <span class="pro-text">PRO</span> | Library
     </div>
-    <div class="nav-right">
-        <div class="nav-links">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="resources.html" class="nav-link active">Resources</a>
-        </div>
-        <a href="login.html" class="auth-btn login-btn">Login</a>
-        <a href="login.html" class="auth-btn signup-btn">Sign Up</a>
-    </div>
+   
   </nav>
 
   <div class="animation-wrapper">
     <div class="scrolling-text" id="scrollText">
-        <span>NEW STUDY GUIDES ADDED!</span>
-        <span>GRADE 12 MATH NOTES OUT NOW!</span>
-        <span>UPLOAD YOUR DOCUMENTS TODAY!</span>
+        <span>Online Extra classes R20 per class</span>
+        <span>Join Now</span>
+        <span>The best online tutoring service</span>
     </div>
   </div>
 
