add favicon and fixed layout

--- a/resources.html
+++ b/resources.html
@@ -22,8 +22,8 @@
 
   <div class="animation-wrapper">
     <div class="scrolling-text" id="scrollText">
-        <span>Online Extra classes R20 per class • Join Now • The best online tutoring service in SA • </span>
-        <span>Peer-2-Peer PRO • Join Now • The best online tutoring service in SA • </span>
+        <span><a href="https://wa.me/27732792426">Online Extra classes R20 per class • Join Now • The best online tutoring service in SA • </a></span>
+        <span><a href="https://wa.me/27732792426">Peer-2-Peer PRO • Join Now •Contact Us now </a></span>
     </div>
   </div>
 
@@ -91,8 +91,38 @@
 
     <div class="documents-section">
         <div class="filter-controls">
-            <select id="subjectFilter"><option value="">All Subjects</option></select>
-            <select id="gradeFilter"><option value="">All Grades</option></select>
+            <select id="subjectFilter">
+                <option value="">All Subjects</option>
+                <option value="mathematics">Mathematics</option>
+                            <option value="physics">Physics</option>
+                            <option value="accounting">Accounting</option>
+                            <option value="english">English</option>
+                            <option value="math_lit">Math Lit</option>
+                            <option value="tourism">Tourism</option>
+                            <option value="life_science">Life Science</option>
+                            <option value="it">IT</option>
+                            <option value="cat">CAT</option>
+                            <option value="history">History</option>
+                            <option value="geography">Geography</option>
+                            <option value="business">Business Studies</option>
+                            <option value="economics">Economics</option>
+                            <option value="isizulu">IsiZulu</option>
+            </select>
+            <select id="gradeFilter">
+                <option value="">All Grades</option>
+                <option value="10">Grade 1</option>
+                        <option value="10">Grade 2</option>
+                        <option value="10">Grade 3</option>
+                        <option value="10">Grade 4</option>
+                        <option value="10">Grade 5</option>
+                        <option value="10">Grade 6</option>
+                        <option value="10">Grade 7</option>
+                        <option value="10">Grade 8</option>
+                        <option value="10">Grade 9</option>
+                        <option value="10">Grade 10</option>
+                        <option value="11">Grade 11</option>
+                        <option value="12">Grade 12</option>
+            </select>
         </div>
         <div id="fileGrid" class="file-grid"></div>
         
