resources.css edit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <body>
 
 <nav id="navbar">
-	<div class="logo">Peer-2-Peer <span>PRO</span></div>
+  <div class="logo">
+        <img src="favicon.ico" alt="Logo">
+        Peer-2-Peer <span class="pro-text">PRO</span>
+      </div>
   <div class="nav-right">
    <a href="login.html"> <button  class="auth-btn login">Login</button></a>
    <a href="login.html"><button class="auth-btn signup">Sign Up</button></a>
