fixed index code

--- a/index.html
+++ b/index.html
@@ -71,24 +71,15 @@
     <div class="footer-box">
       <h4>Contact</h4>
       <p>Email Support</p>
-      <a href="mailto:info@peer-2-peer.co.za">info@peer-2-peer.co.za</a>
-
       <p style="margin-top:12px;">Tutor Applications</p>
-      <a href="mailto:hr@peer-2-peer.co.za">hr@peer-2-peer.co.za</a>
+      <a href="mailto:hr@peer-2-peer.co.za">admin@peer-2-peer.co.za</a>
     </div>
      <div class="footer-box">
             <h4>Quick Links</h4>
             <a href="index.html">Home</a>
             <a href="https://wa.me/27732792426">WhatsApp Us</a>
+            <a href="resources.html">Resources</a>
         </div>
-
-    <div class="footer-box">
-      <h4>Quick Links</h4>
-      <a href="index.html">Home</a>
-           <a href="resources.html">Resources</a>
-
-      <a href="https://wa.me/27732792426">WhatsApp Us</a>
-    </div>
 
   </div>
 
