--- a/resources.html
+++ b/resources.html
@@ -41,7 +41,7 @@
   <main class="content-container">
     <div class="upload-section">
         <div class="upload-card">
-            <form id="uploadForm">
+            <form id="uploadForm" onsubmit="event.preventDefault(); uploadDocument();">
                 <h2><i class="fas fa-cloud-upload-alt"></i> Upload Document</h2>
                 <div class="upload-area" onclick="document.getElementById('fileInput').click()">
                     <i class="fas fa-file-upload"></i>
