--- a/login.html
+++ b/login.html
@@ -139,6 +139,7 @@
     </div>
   </div>
 </div>
+<script src="login.js"></script>
 <footer class="footer">
   <div class="footer-inner">
     <div class="footer-box">
